--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -38,6 +38,7 @@ body
   overscroll-behavior: none
   -webkit-tap-highlight-color: transparent
   background: red
+  overflow: auto
   img
     max-width: 100%
     height: auto
@@ -333,7 +334,7 @@ body
         background-color: $blue-dropp
         background-size: 100% 100%
         overflow-y: hidden
-        padding: 8px 23px 36px
+        padding: 25px 23px 36px
         cursor: auto
         .center
           text-align: center
