--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -322,7 +322,7 @@ body
         top: 0
         width: 70px
         height: 62px
-        background: url("../img/closebtn.jpg") no-repeat 50% 50% / cover
+        background: url("../img/closeBtn.jpg") no-repeat 50% 50% / cover
         &:hover
           cursor: pointer
           transform: scale(1.1)
