--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -17,15 +17,11 @@ button.menu-btn menu
             .right
                 .title
                     .title__top
-                        picture.uk
+                        picture
                             img(src="img/title-top.png" alt="text")
-                        picture.en
-                            img(src="img/title-top-en.png" alt="text")
                     .title__bottom
-                        picture.uk
+                        picture
                             img(src="img/title-bottom.png" alt="text")
-                        picture.en
-                            img(src="img/title-bottom-en.png" alt="text")
                 .right__center
                     .timer
                         .right__title до початку акції залишилось
