--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -637,3 +637,9 @@
       &__item
         transform: scale(0.65)
         transform-origin: center
+
+  @media screen and (max-height: 320px)
+    .popups
+      &__item
+        transform: scale(0.55)
+        transform-origin: center
