--- a/front/sass/pages/dark.sass
+++ b/front/sass/pages/dark.sass
@@ -20,6 +20,11 @@ body.dark
           background: linear-gradient(0deg, $dark-bg 0%, rgba(1, 1, 62, 0.00) 100%)
           @media screen and (max-width: 1050px)
             background: linear-gradient(0deg, #12131C 0%, rgba(18, 19, 28, 0.85) 25%, rgba(18, 19, 28, 0.5) 50%, rgba(18, 19, 28, 0.2) 75%, rgba(18, 19, 28, 0) 100%)
+    .popups
+      background: $black
+      &__item
+        &-txt
+          background-color: $black
 
 
 
