--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -37,7 +37,7 @@ body.light
 body
   overscroll-behavior: none
   -webkit-tap-highlight-color: transparent
-  background: red
+  background: $blue
   overflow: auto
   img
     max-width: 100%
