--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -4,21 +4,21 @@
             .left
                 .left__info *Під призовим фондом у 1 000 000 ₴ мається на увазі отримання призу у вигляді електронних грошових замінників в Акції «Чемпіонський виклик». Період дії акції – з 12:00 15.07.2025 по 22:29 19.07.2025 року. #[br] Деталі акції на сайті favbet.ua.
                 .left__usyk
-                    img(src="img/usyk-mob.png" alt="Dubois")
+                    img(src="https://fav-prom.com/html/champion-challenge-tizer/img/usyk-mob.png" alt="Dubois")
                 .left__dubois
                     picture
-                        source(media="(max-width: 600px)" srcset="img/dubois-mob.png")
-                        source(media="(max-width: 950px) and (max-height: 500px) and (orientation: landscape)" srcset="img/dubois-mob.png")
-                        source(media="(max-width: 1050px)" srcset="img/dubois-tab.png")
-                        img(src="img/dubois-desk.png" alt="Dubois")
+                        source(media="(max-width: 600px)" srcset="https://fav-prom.com/html/champion-challenge-tizer/img/dubois-mob.png")
+                        source(media="(max-width: 950px) and (max-height: 500px) and (orientation: landscape)" srcset="https://fav-prom.com/html/champion-challenge-tizer/img/dubois-mob.png")
+                        source(media="(max-width: 1050px)" srcset="https://fav-prom.com/html/champion-challenge-tizer/img/dubois-tab.png")
+                        img(src="https://fav-prom.com/html/champion-challenge-tizer/img/dubois-desk.png" alt="Dubois")
             .right
                 .title
                     .title__top
                         picture
-                            img(src="img/title-top.png" alt="text")
+                            img(src="https://fav-prom.com/html/champion-challenge-tizer/img/title-top.png" alt="text")
                     .title__bottom
                         picture
-                            img(src="img/title-bottom.png" alt="text")
+                            img(src="https://fav-prom.com/html/champion-challenge-tizer/img/title-bottom.png" alt="text")
                 .right__center
                     .timer
                         .right__title до початку акції залишилось
