--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -33,7 +33,7 @@ body
 .spinner
   width: 60px
   height: 60px
-  background: url("../img/loader.svg") no-repeat 0 0/contain
+  background: url("https://fav-prom.com/html/champion-challenge-tizer/img/loader.svg") no-repeat 0 0/contain
   animation: scale .7s alternate infinite
 
 .fav-page.loading
@@ -54,12 +54,12 @@ body
     position: relative
     width: 1366px
     height: 656px
-    background: url('../img/bg-desk.jpg') no-repeat 50% 50%/cover
+    background: url('https://fav-prom.com/html/champion-challenge-tizer/img/bg-desk.jpg') no-repeat 50% 50%/cover
     background-size: auto 656px
     @media screen and (max-width: 1050px)
-      background: url('../img/bg-tab.jpg') no-repeat 50% 50%/cover
+      background: url('https://fav-prom.com/html/champion-challenge-tizer/img/bg-tab.jpg') no-repeat 50% 50%/cover
     @media screen and (max-width: 600px)
-      background: url('../img/bg-mob.jpg') no-repeat 50% 50%/cover
+      background: url('https://fav-prom.com/html/champion-challenge-tizer/img/bg-mob.jpg') no-repeat 50% 50%/cover
     &:before
       content: ""
       position: absolute
@@ -228,10 +228,10 @@ body
         text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.40)
         letter-spacing: 1.2px
         user-select: none
-        background: url("../img/drop-bg-desk.png") no-repeat 50% 50% / cover
+        background: url("https://fav-prom.com/html/champion-challenge-tizer/img/drop-bg-desk.png") no-repeat 50% 50% / cover
         background-size: 100% 100%
         @media screen and (max-width: 505px)
-          background: url("../img/drop-bg-mob.png") no-repeat 50% 50% / cover
+          background: url("https://fav-prom.com/html/champion-challenge-tizer/img/drop-bg-mob.png") no-repeat 50% 50% / cover
           background-size: 100% 100%
         &:hover
           background: $green
@@ -284,7 +284,7 @@ body
         text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.40)
         letter-spacing: 1.2px
         user-select: none
-        background: url("../img/drop-bg-desk.png") no-repeat 50% 50% / cover
+        background: url("https://fav-prom.com/html/champion-challenge-tizer/img/drop-bg-desk.png") no-repeat 50% 50% / cover
         background-size: 100% 100%
       &-closeBtn
         transition: .3s ease
@@ -294,7 +294,7 @@ body
         top: 0
         width: 70px
         height: 62px
-        background: url("../img/closeBtn.jpg") no-repeat 50% 50% / cover
+        background: url("https://fav-prom.com/html/champion-challenge-tizer/img/closeBtn.jpg") no-repeat 50% 50% / cover
         &:hover
           cursor: pointer
           transform: scale(1.1)
@@ -302,7 +302,7 @@ body
         width: 100%
         max-height: 653px
         min-height: 653px
-        background: url('../img/drop-txt-bg.png') no-repeat 50% 50%/cover
+        background: url('https://fav-prom.com/html/champion-challenge-tizer/img/drop-txt-bg.png') no-repeat 50% 50%/cover
         background-color: $blue-dropp
         background-size: 100% 100%
         overflow-y: hidden
