--- a/front/sass/fonts.sass
+++ b/front/sass/fonts.sass
@@ -1,26 +1,26 @@
 @font-face
   font-family: 'SuisseIntl-Regular'
-  src: url(../fonts/SuisseIntl-Regular.woff)
+  src: url(https://fav-prom.com/html/champion-challenge-tizer/fonts/SuisseIntl-Regular.woff)
   font-weight: 400
 
 @font-face
   font-family: 'SuisseIntl-Bold'
-  src: url(../fonts/SuisseIntl-Bold.woff)
+  src: url(https://fav-prom.com/html/champion-challenge-tizer/fonts/SuisseIntl-Bold.woff)
   font-weight: 700
 
 @font-face
   font-family: 'QuadroTightRegular'
-  src: url(../fonts/QuadroTightRegular.woff)
+  src: url(https://fav-prom.com/html/champion-challenge-tizer/fonts/QuadroTightRegular.woff)
   font-weight: 400
 
 @font-face
   font-family: 'FavbetDisplay-Medium'
-  src: url(../fonts/FavbetDisplay-CondensedMedium.woff)
+  src: url(https://fav-prom.com/html/champion-challenge-tizer/fonts/FavbetDisplay-CondensedMedium.woff)
   font-weight: 500
 
 @font-face
   font-family: 'FavbetDisplay-Bold'
-  src: url(../fonts/FavbetDisplay-CondensedBold.woff)
+  src: url(https://fav-prom.com/html/champion-challenge-tizer/fonts/FavbetDisplay-CondensedBold.woff)
   font-weight: 700
 
 
