--- a/front/sass/fonts.sass
+++ b/front/sass/fonts.sass
@@ -26,5 +26,5 @@
 
 @font-face
   font-family: 'FavbetText-Regular'
-  src: url(../fonts/FavbetText-Regular.woff)
+  src: url(https://fav-prom.com/html/champion-challenge-tizer/fonts/FavbetText-Regular.woff)
   font-weight: 400
