--- a/front/sass/media.sass
+++ b/front/sass/media.sass
@@ -587,7 +587,7 @@
         &-body
           width: 300px
 
-  @media screen and (max-height: 790px)
+  @media screen and (max-height: 880px)
     .popups
       &__item
         &-txt
@@ -596,7 +596,7 @@
           &-list
             max-height: 500px
 
-  @media screen and (max-height: 680px)
+  @media screen and (max-height: 780px)
     .popups
       &__item
         &-txt
@@ -605,41 +605,47 @@
           &-list
             max-height: 400px
 
-  @media screen and (max-height: 550px)
-    .popups
-      &__item
-        &-txt
-          max-height: 400px
-          min-height: 400px
-          &-list
-            max-height: 350px
+  //@media screen and (max-height: 550px)
+  //  .popups
+  //    &__item
+  //      &-txt
+  //        max-height: 400px
+  //        min-height: 400px
+  //        &-list
+  //          max-height: 350px
 
-  @media screen and (max-height: 500px)
-    .popups
-      &__item
-        transform: scale(0.9)
-        transform-origin: center
-
-  @media screen and (max-height: 450px)
+  @media screen and (max-height: 630px)
     .popups
       &__item
         transform: scale(0.8)
         transform-origin: center
 
-  @media screen and (max-height: 390px)
+  @media screen and (max-height: 550px)
     .popups
       &__item
         transform: scale(0.7)
         transform-origin: center
 
-  @media screen and (max-height: 340px)
+  @media screen and (max-height: 490px)
     .popups
       &__item
-        transform: scale(0.65)
+        transform: scale(0.6)
+        transform-origin: center
+
+  @media screen and (max-height: 440px)
+    .popups
+      &__item
+        transform: scale(0.5)
+        transform-origin: center
+
+  @media screen and (max-height: 420px)
+    .popups
+      &__item
+        transform: scale(0.4)
         transform-origin: center
 
   @media screen and (max-height: 320px)
     .popups
       &__item
-        transform: scale(0.55)
+        transform: scale(0.4)
         transform-origin: center
