--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -201,6 +201,7 @@ body
           font-size: 90px
           letter-spacing: 0.9px
           display: flex
+          white-space: nowrap
           span
             margin-left: 5px
             font-family: $font-2-quadro-tight-regular
